Fix horizontal scrollbar issue and default layout config option

--- a/css/index.css
+++ b/css/index.css
@@ -71,6 +71,8 @@ h1 {
   margin: 0;
   padding: 2% 5%;
   vertical-align: middle;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 #container.list .location,
